@@ -1,4 +1,10 @@
-% column constants for video data
+
+% 3DFM Analysis
+% Tracking
+% last modified 08/01/06
+%  
+% script that creates column constants for video tracking data matrix.
+%
 
     TIME   = 1; 
     ID     = 2; 
@@ -10,7 +16,6 @@
     PITCH  = 8; 
     YAW    = 9; 
     RADIAL = 10;
-    PULSE  = 11;
-    SEQ    = 12;
+
     
     
